<resources>
    <string name="app_name">myinitactiv1</string>
        <string name="button">Enviar</string>
        <string name="textView">Nome/Email</string>
        <string name="loginPlaceHolder">LOGIN</string>
        <string name="passwordEditText">Senha</string>
        <string name="registerText">Não possue uma conta?</string>
        <string name="botao_cadastro">Cadastrar-se</string>
        <string name="cadastro_nome">Digite seu nome</string>
        <string name="cadastro_senha">Digite sua senha</string>
        <string name="confirmacao_senha">Digite sua senha novamente</string>
        <string name="cadastro_email">Digite seu email</string>
        <string name="botao_confirma_cadastro">Cadastrar</string>
        <string name="cadastro_placeholder">CADASTRE-SE</string>
        <string name="loginButton">Login</string>
        <string name="date_hint">Selecione a data</string>
    <string name="todo">TODO</string>
</resources>